--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
-.idea/markdown-navigator/
+.idea/markdown-navigator/profile_settings.xml
+.idea/*
+
